nav overflow fixed

--- a/src/components/Window/Window.css
+++ b/src/components/Window/Window.css
@@ -74,7 +74,10 @@
     padding-bottom: 3px;
     font-size: 0.8em;
     font-weight: normal;
-    cursor:default;
+    cursor: default;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .window-nav-icon{
